src/objects/Case_Leads__c.object
<CustomObject>
    <fields>
        <fullName>BeingTracked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Being Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Category__c</fullName>
        <label>Case Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Criminal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Description__c</fullName>
        <label>Case Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Listener__c</fullName>
        <formula>HYPERLINK(&quot;https://www.courtlistener.com/?q=&quot; +  Case_Name__c , &quot;Search Court Listener&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Listener</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Management_Conference__c</fullName>
        <label>Case Management Conference</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <label>Case Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <label>Case Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VIP 1</fullName>
                </value>
                <value>
                    <fullName>VIP 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status_Category__c</fullName>
        <label>Case Status Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Disposed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Judgment Entered</fullName>
                </value>
                <value>
                    <fullName>Other Pending</fullName>
                </value>
                <value>
                    <fullName>Other Disposed</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type_Category__c</fullName>
        <label>Case Type Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type_Subcategory__c</fullName>
        <label>Case Type Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small Claim</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Injury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other Small Claim</fullName>
                </value>
                <value>
                    <fullName>Chapter 7</fullName>
                </value>
                <value>
                    <fullName>Chapter 13</fullName>
                </value>
                <value>
                    <fullName>Other Product Liability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Primary_Rep_Email__c</fullName>
        <label>Commission-Primary Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Commission_Secondary_Rep_Email__c</fullName>
        <label>Commission-Secondary Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Commission_Tertiary_Rep_Email__c</fullName>
        <label>Commission-Tertiary Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission</label>
        <referenceTo>Commission__c</referenceTo>
        <relationshipLabel>Case Leads</relationshipLabel>
        <relationshipName>Case_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courthouse__c</fullName>
        <label>Courthouse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Downey Courthouse</fullName>
                </value>
                <value>
                    <fullName>Chatsworth Courthouse</fullName>
                </value>
                <value>
                    <fullName>California Central Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Florida Middle Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Alhambra Courthouse</fullName>
                </value>
                <value>
                    <fullName>California Southern Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Michael Antonovich Antelope Valley Courthouse</fullName>
                </value>
                <value>
                    <fullName>Texas Eastern District</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Deadline__c</fullName>
        <label>Discovery Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Docket_Alarm__c</fullName>
        <formula>HYPERLINK(&quot;https://www.docketalarm.com/cases/&quot; + substitute(SUBSTITUTE(TEXT(Courthouse__c) , &quot; &quot;, &quot;_&quot;),&quot;:&quot;,&quot;--&quot;) + &quot;_Court/&quot; + Case_Number__c , &quot;Search Docketalarm&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docket Alarm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docket_Entry_Token__c</fullName>
        <label>Docket Entry Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dockets__c</fullName>
        <label>Docket #</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filing_Date__c</fullName>
        <label>Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Followup_Date__c</fullName>
        <label>Followup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Google__c</fullName>
        <formula>HYPERLINK(&quot;https://www.google.com/search?q=&quot; + Case_Name__c, &quot;Search Google&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Profile_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Profile Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Los Angeles County Superior Courts</fullName>
                </value>
                <value>
                    <fullName>U.S. Bankruptcy Courts</fullName>
                </value>
                <value>
                    <fullName>U.S. District Courts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastSFDCUpdatedfromUnicourt__c</fullName>
        <description>This field shows when Case details in SFDC are updated from Unicourt</description>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Deposition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Deposition</label>
        <referenceTo>Deposition__c</referenceTo>
        <relationshipLabel>Case Leads</relationshipLabel>
        <relationshipName>Case_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Parties__c</fullName>
        <label># of Parties</label>
        <summaryForeignKey>Representation__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Case</label>
        <referenceTo>Case_Leads__c</referenceTo>
        <relationshipLabel>Child Cases</relationshipLabel>
        <relationshipName>Case_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RECAP__c</fullName>
        <formula>HYPERLINK(&quot;https://www.courtlistener.com/?type=r&amp;q=&quot; + Case_Name__c + &quot;&amp;type=r&amp;order_by=score+desc&quot;,&quot;Search RECAP&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RECAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <label>Sales Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Pursue</fullName>
                </value>
                <value>
                    <fullName>In Contact</fullName>
                </value>
                <value>
                    <fullName>Proposal Submitted</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Saved_Search__c</fullName>
        <label>Source Saved Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>PACER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uni_UpdateRequestedOn__c</fullName>
        <label>Update Requested On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unicourt_Case_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unicourt Case ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unicourt__c</fullName>
        <formula>HYPERLINK(&quot;https://app.unicourt.com/researcher/case/detail/&quot;+ Unicourt_Case_ID__c + &quot;#dockets&quot;, &quot;Search Unicourt&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unicourt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Request_Status__c</fullName>
        <label>Update Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued for Update</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Had No Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Lead</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_Name__c</columns>
        <columns>Case_Category__c</columns>
        <columns>Sales_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Case_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Leads Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Leads</pluralLabel>
    <recordTypes>
        <fullName>Closed_Case</fullName>
        <active>true</active>
        <label>Closed Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>